# xsecurelock

./: .gitignore  CONTRIBUTING  Doxyfile.in  Makefile.am  README.md  auth_child.c  auth_child.h  autogen.sh  build-release.sh  configure.ac  ensure-documented-settings.sh  ensure_documented_settings.sh  env_info.c  env_info.h  env_settings.c  env_settings.h  incompatible_compositor.xbm  incompatible_compositor.xbm.sh  logging.c  logging.h  main.c  mlock_page.h  run-iwyu.sh  run-linters.sh  saver_child.c  saver_child.h  unmap_all.c  unmap_all.h  util.c  util.h  version.h  wait_pgrp.c  wait_pgrp.h  wm_properties.c  wm_properties.h  xscreensaver_api.c  xscreensaver_api.h
debian/: README.source  TODO  changelog  control  copyright  lintian-overrides  rules  watch
debian/upstream/: metadata
doc/: xsecurelock.1.md
doc/examples/: saver_livestreams
helpers/: auth_htpasswd  auth_htpasswd.in  auth_pam_x11.c  auth_pamtester  auth_pamtester.in  auth_x11.c  authproto.c  authproto.h  authproto_htpasswd.in  authproto_pam.c  authproto_pamtester.in  dimmer.c  monitors.c  monitors.h  pgrp_placeholder.c  saver_blank  saver_mplayer  saver_mplayer.in  saver_mpv  saver_mpv.in  saver_multiplex.c  saver_xscreensaver  saver_xscreensaver.in  until_nonidle.c
test/: break-compositor.c  cat_authproto.c  get-compositor.c  get_compositor.c  nvidia_break_compositor.c  remap-all.c  remap_all.c  run-in-xephyr.sh  run-test.sh  run-tests.sh  test-correct-password.xdo  test-want-first-keypress-no.xdo  test-want-first-keypress-yes.xdo  test-wrong-password.xdo  test-xrandr.xdo
